Resolves: tdf#103809 the argument is a bool* not a VclPtr

Change-Id: Ia07f4ff7b243708304186c840135ec1180621fa5