sw/source/uibase/utlui/navipi.cxx
@@ -231,13 +231,13 @@ IMPL_LINK( SwNavigationPI, ToolBoxSelectHdl, ToolBox *, pBox, void )
     {
         // #i75416# move the execution of the search to an asynchronously called static link
         bool* pbNext = new bool(false);
-        Application::PostUserEvent(LINK(pView, SwView, MoveNavigationHdl), pbNext, true);
+        Application::PostUserEvent(LINK(pView, SwView, MoveNavigationHdl), pbNext);
     }
     else if (sCommand == "forward")
     {
         // #i75416# move the execution of the search to an asynchronously called static link
         bool* pbNext = new bool(true);
-        Application::PostUserEvent(LINK(pView, SwView, MoveNavigationHdl), pbNext, true);
+        Application::PostUserEvent(LINK(pView, SwView, MoveNavigationHdl), pbNext);
     }
     else if (sCommand == "root")
     {
